crates/tests/databases-tests/src/cockroach/snapshots/databases_tests__cockroach__query_tests__basic__embedded_variable.snap
---
source: crates/tests/databases-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Jota Quest-1995"
      }
    ]
  },
  {
    "rows": []
  },
  {
    "rows": [
      {
        "Title": "Rock In Rio [CD1]"
      },
      {
        "Title": "Rock In Rio [CD2]"
      },
      {
        "Title": "Riot Act"
      }
    ]
  },
  {
    "rows": [
      {
        "Title": "Garage Inc. (Disc 1)"
      },
      {
        "Title": "Garage Inc. (Disc 2)"
      }
    ]
  },
  {
    "rows": [
      {
        "Title": "Beyond Good And Evil"
      }
    ]
  }
]
