crates/tests/databases-tests/src/cockroach/snapshots/databases_tests__cockroach__query_tests__basic__select_array_column_reverse.snap
---
source: crates/tests/databases-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "reversed": [
          "c",
          "b",
          "a"
        ]
      }
    ]
  }
]
