crates/tests/databases-tests/src/cockroach/snapshots/databases_tests__cockroach__query_tests__basic__select_array_variable.snap
---
source: crates/tests/databases-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "result": 2
      }
    ]
  },
  {
    "rows": [
      {
        "result": 3
      }
    ]
  }
]
