crates/tests/databases-tests/src/cockroach/snapshots/databases_tests__cockroach__query_tests__basic__select_composite_variable_simple.snap
---
source: crates/tests/databases-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "result": {
          "address_line_1": "Somstreet 159",
          "address_line_2": "Second door to the right"
        }
      }
    ]
  },
  {
    "rows": [
      {
        "result": {
          "address_line_1": "Somstreet 159",
          "address_line_2": "Second door to the right"
        }
      }
    ]
  }
]
